tests/neg/i4936.scala
abstract object Foo // error
sealed final abstract case object Bar // error

abstract override object Baz // error
